# logram

./: .editorconfig  .gitignore  .travis.yml  Cargo.toml  Dockerfile  LICENSE  LICENSE.md  README.md  cli.yaml  logram.service
assets/: config.sample.yaml  config.yaml  logram.service
assets/scripts/: logram.service
docs/: chat_id.md  config.md  lib.md  log_sources.md
src/: args.rs  config.rs  echo_id.rs  error.rs  lib.rs  main.rs  slog.rs
src/config/: error.rs  mod.rs
src/lib/: logger.rs  mod.rs
src/slog/: mod.rs
src/source/: config.rs  mod.rs  record.rs
src/source/counter/: config.rs  mod.rs
src/source/docker/: config.rs  mod.rs
src/source/filesystem/: config.rs  mod.rs  reader.rs
src/source/fs/: event.rs  mod.rs  test.rs
src/source/journald/: config.rs  event.rs  mod.rs  record.rs  test.rs
src/telegram/: config.rs  debounce.rs  debouncer.rs  error.rs  fmt.rs  format.rs  message.rs  mod.rs  types.rs  utils.rs
src/telegram/api/: mod.rs  types.rs
src/telegram/debouncer/: mod.rs  test.rs
src/utils/: crop_ansi_codes.rs  mod.rs  option_zip.rs  result_channel.rs
src/watcher/: error.rs  mod.rs
