[package]
name = "logram"
version = "2.0.0"
authors = ["Max Eliseev <seevmx@gmail.com>"]
description = "Utility that takes logs from anywhere and sends them to Telegram"
license = "MIT"
edition = "2018"

[features]
default = ["ls_counter", "ls_filesystem", "ls_journald", "ls_docker"]
ls_counter = []
ls_filesystem = ["notify"]
ls_journald = ["systemd"]
ls_docker = ["bollard"]

[dependencies]
anyhow = "1.0"
clap = "2.33"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
teloxide = "0.3"
tokio = { version =  "0.2", features = ["rt-threaded", "macros", "time", "blocking"] }
reqwest = "0.10"
chrono = "0.4"
futures = "0.3"
hostname = "0.3"
cfg-if = "1.0"

notify = { version = "4.0", optional = true }
systemd = { version = "0.8", optional = true }
bollard = { version = "0.9", optional = true }
